--- a/.env.prod
+++ b/.env.prod
@@ -2,10 +2,10 @@ VUE_APP_MODE='production'
 VUE_APP_URL='/atpsign'
 VUE_APP_RESURL = "https://account.bol.wo.cn/pclogin?clientId=activetemplate&redirectUrl="
 VUE_APP_REGURL = "https://account.bol.wo.cn/pcregister?clientId=activetemplate&redirectUrl="
-VUE_APP_PREURL = "http://atp.bol.wo.cn/"
-VUE_APP_ATPURL = "http://atp.bol.wo.cn/atp/"
-VUE_APP_PORTALURL = "http://atp.bol.wo.cn/"
-VUE_APP_LOTTERYURL = "http://atp.bol.wo.cn/atplottery/"
-VUE_APP_SIGNURL = "http://atp.bol.wo.cn/atpsign/"
-VUE_APP_HOMEURL = "http://atp.bol.wo.cn/"
+VUE_APP_PREURL = "https://atp.bol.wo.cn/"
+VUE_APP_ATPURL = "https://atp.bol.wo.cn/atp/"
+VUE_APP_PORTALURL = "https://atp.bol.wo.cn/"
+VUE_APP_LOTTERYURL = "https://atp.bol.wo.cn/atplottery/"
+VUE_APP_SIGNURL = "https://atp.bol.wo.cn/atpsign/"
+VUE_APP_HOMEURL = "https://atp.bol.wo.cn/"
 VUE_APP_HFGO = "https://hfgo.wo.cn/act/"
