--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 VUE_APP_MODE='production'
-VUE_APP_URL='/atpsign'
+VUE_APP_URL='/atplottery'
 VUE_APP_RESURL = "https://account.bol.wo.cn/pclogin?clientId=activetemplate&redirectUrl="
 VUE_APP_REGURL = "https://account.bol.wo.cn/pcregister?clientId=activetemplate&redirectUrl="
 VUE_APP_PREURL = "https://atp.bol.wo.cn/"
