--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,11 @@
 VUE_APP_MODE='production'
-VUE_APP_URL='/atpsign'
-VUE_APP_RESURL = "http://h5test.wostore.cn/pclogin?clientId=activetemplate&redirectUrl="
-VUE_APP_REGURL = "http://h5test.wostore.cn/pcregister?clientId=activetemplate&redirectUrl="
-VUE_APP_PREURL = "http://h5test.wostore.cn/"
-VUE_APP_ATPURL = "http://h5test.wostore.cn/atp/"
-VUE_APP_PORTALURL = "http://h5test.wostore.cn/atpportal/"
-VUE_APP_LOTTERYURL = "http://h5test.wostore.cn/atplottery/"
-VUE_APP_SIGNURL = "http://h5test.wostore.cn/atpsign/"
-VUE_APP_HOMEURL = "http://h5test.wostore.cn/atpportal/"
-VUE_APP_HFGO = "http://h5test.wostore.cn/hfgo_activity/"
+VUE_APP_URL='/atplottery'
+VUE_APP_RESURL = "https://account.bol.wo.cn/pclogin?clientId=activetemplate&redirectUrl="
+VUE_APP_REGURL = "https://account.bol.wo.cn/pcregister?clientId=activetemplate&redirectUrl="
+VUE_APP_PREURL = "https://atp.bol.wo.cn/"
+VUE_APP_ATPURL = "https://atp.bol.wo.cn/atp/"
+VUE_APP_PORTALURL = "https://atp.bol.wo.cn/"
+VUE_APP_LOTTERYURL = "https://atp.bol.wo.cn/atplottery/"
+VUE_APP_SIGNURL = "https://atp.bol.wo.cn/atpsign/"
+VUE_APP_HOMEURL = "https://atp.bol.wo.cn/"
+VUE_APP_HFGO = "https://hfgo.wo.cn/act/"
