--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
+    "jquery": "^3.5.1",
+    "mockjs": "^1.1.0",
+    "moment": "^2.29.0",
     "swiper": "^5.2.0",
     "vant": "^2.10.1",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.5",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
